--- a/templates/home.html
+++ b/templates/home.html
@@ -72,7 +72,7 @@
       </nav>
       <div class="photo-area">
         <img class="photo" src="{% static 'img/cover.jpeg' %}">
-        <a class="btn btn-success btn-lg words" href="#" role="button">Sign in</a>
+        <a class="btn btn-success btn-lg words" href="/login" role="button">Sign in</a>
       </div>
       <div class="container">
         <div class="row">
