--- a/templates/questions.html
+++ b/templates/questions.html
@@ -107,7 +107,7 @@
     choices: ["1950-1959", "1960-1969", "1970-1979", "1980-1989", "1990-1999"],
     correctAnswer: 2
   }, {
-    question: "What is 3*6?",
+    question: "How much is the room rent?",
     choices: [3, 6, 9, 12, 18],
     correctAnswer: 4
   }, {
