--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -48,7 +48,7 @@
 
       <form class="form-signin">
       <div class="form-signin-heading"><img class="profile-image" src="{% static 'img/zhanchen.jpg' %}"></div>
-        <a class="btn btn-lg btn-primary btn-block button">Profile</a>
+        <a class="btn btn-lg btn-primary btn-block button" href="{% url 'swipe_supply'%}">Profile</a>
         <a class="btn btn-lg btn-primary btn-block button">Dashboard</a>
       </form>
 
