--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -49,7 +49,7 @@
       <form class="form-signin">
       <div class="form-signin-heading"><img class="profile-image" src="{% static 'img/zhanchen.jpg' %}"></div>
         <a class="btn btn-lg btn-primary btn-block button" href="{% url 'swipe_supply'%}">Profile</a>
-        <a class="btn btn-lg btn-primary btn-block button">Dashboard</a>
+        <a class="btn btn-lg btn-primary btn-block button" href="{% url 'dashboard'%}">Dashboard</a>
       </form>
 
     </div> <!-- /container -->
